--- a/static/css/cf-enhancements.less
+++ b/static/css/cf-enhancements.less
@@ -265,18 +265,19 @@ tbody {
 
 
 /* topdoc
-  name: Collapsable Tables
+  name: Simple Tables
   family: cfgov-cf-enhancements
   notes:
     - Extends the above stacked tables for sm devices
     - Hides the thead
-    - Allows td to be styled as heading
-    - Adds data-label for small td labels above td content
+    - Styles first td as if it were the thead
+    - Allows any other td to be styled as a heading level 4
+    - Adds data-label attr for small td labels above td content
   patterns:
     - name: Collapsable Table
       markup: |
-        <table class="collapsed-table">
-            <thead class="u-hide-on-mobile">
+        <table class="simple-table">
+            <thead>
                 <tr>
                     <th>Column 1</th>
                     <th>Column 2</th>
@@ -285,19 +286,19 @@ tbody {
             <tbody>
                 <tr>
                     <td>Lorem ipsum dolor.</td>
-                    <td class="collapsed-table_row-heading">Lorem ipsum dolor.</td>
+                    <td class="simple-table_row-heading">Lorem ipsum dolor.</td>
                     <td data-label="Lorem">Lorem ipsum dolor.</td>
                     <td data-label="Ipsum">Lorem ipsum dolor.</td>
                 </tr>
                 <tr>
                     <td>Lorem ipsum dolor.</td>
-                    <td class="collapsed-table_row-heading">Lorem ipsum dolor.</td>
+                    <td class="simple-table_row-heading">Lorem ipsum dolor.</td>
                     <td data-label="Lorem">Lorem ipsum dolor.</td>
                     <td data-label="Ipsum">Lorem ipsum dolor.</td>
                 </tr>
                 <tr>
                     <td>Lorem ipsum dolor.</td>
-                    <td class="collapsed-table_row-heading">Lorem ipsum dolor.</td>
+                    <td class="simple-table_row-heading">Lorem ipsum dolor.</td>
                     <td data-label="Lorem">Lorem ipsum dolor.</td>
                     <td data-label="Ipsum">Lorem ipsum dolor.</td>
                 </tr>
@@ -306,7 +307,7 @@ tbody {
   tags:
     - cfgov-cf-enhancements
 */
-.collapsed-table {
+.simple-table {
     .respond-to-max(959px, {
 
         font-size: 14px;
@@ -319,11 +320,15 @@ tbody {
             border-top: none;
         }
 
-        td,
-        th,
-        tbody  tr:nth-child(odd) > td,
-        tbody > tr:nth-child(odd) >th {
+        tr {
+            border-bottom: none;
+        }
+
+        td:first-child {
+            .h4();
+
             background-color: @gray-5;
+            margin-bottom: 10px;
         }
 
         td[data-label] {
