--- a/_includes/events-hero.html
+++ b/_includes/events-hero.html
@@ -31,11 +31,13 @@
         </a>
     </div>
     <div class="hero_img-container hero_img-container__small">
+        <!-- TODO replace background-image with actual image. -->
         <div class="hero_img"
              style="background-image:url({{ 'http://placehold.it/660x300.jpg' }});">
         </div>
     </div>
     <div class="hero_img-container hero_img-container__large">
+        <!-- TODO replace background-image with actual image. -->
         <div class="hero_img"
              style="background-image:url({{ 'http://placehold.it/1200x300.jpg ' }});">
         </div>
