--- a/static/css/event.less
+++ b/static/css/event.less
@@ -1,6 +1,6 @@
 /* ==========================================================================
    cfgov-refresh
-   Event post detail page
+   Page-specific styles for event post detail page.
    ========================================================================== */
 
 .event-status {
