--- a/static/css/modification-date.less
+++ b/static/css/modification-date.less
@@ -29,10 +29,10 @@
 */
 
 .modification-date {
-  background: @green-tint;
-  display: inline-block;
-  text-align: center;
-  padding: 0 20px 0; // TODO Figure out how CF handles padding for this sort of thing.
+    background: @green-tint;
+    display: inline-block;
+    text-align: center;
+    padding: 0 20px 0;
 }
 
 /* topdoc
