--- a/static/css/event.less
+++ b/static/css/event.less
@@ -3,6 +3,96 @@
    Page-specific styles for event post detail page.
    ========================================================================== */
 
+.post-preview__event {
+    border-top: 1px solid @gray-50;
+    padding-top:  1em;
+
+    .media-object_image-container {
+         .respond-to-max(@mobile-max {
+            display: none;
+        });
+    }
+}
+
+.summary {
+    .calendar-icon {
+        .cf-calendar-icon( attr(data-month), attr(data-day), @gray-50, @white, 1);
+        float: left;
+        margin: 0 (@grid_gutter-width/2) 0 0;
+    }
+
+    .event-meta {
+        color: @black;
+    }
+
+    .event-meta_address {
+
+        .respond-to-max(@mobile-max {
+            display: block;
+        });
+
+        &:before {
+            content: none;
+            margin: 0;
+        }
+    }
+
+    .event-meta_venue:after {
+        content: "\2014";
+        margin-left: .5em;
+
+        .respond-to-max(@mobile-max {
+            content: none;
+        });
+    }
+}
+
+.summary_header {
+    margin-bottom: .5em;
+}
+
+.summary_heading, .event-meta_address {
+    margin: 0;
+}
+
+.summary-meta_container {
+    overflow: auto;
+}
+
+.event-meta {
+    .h5();
+}
+
+.event-meta_description {
+    text-transform: none;
+}
+
+.event-meta_address {
+    text-transform: capitalize;
+    display: inline-block;
+
+    // Adding em dash after address
+    &:before{
+        content: "\2014";
+        margin-right: .2em;
+    }
+}
+
+// Adding comma after city
+.event-meta_city:after {
+    content: "\2C";
+}
+
+.event-meta_datetime {
+    letter-spacing: normal;
+}
+
+// Adding "at" symbol before time
+.event-meta_time:before {
+    content: "\40";
+    margin-right: .2em;
+}
+
 .event-status {
     color: @black;
     .webfont-regular();
@@ -14,47 +104,70 @@
     }
 }
 
-/* topdoc
-  name: Event Footer
-  family: cfgov-event
-  notes:
-    - "Markup to display event footer, including the banner, download button, and email link"
-  patterns:
-    - name: Event footer demo with initialization markup
-      markup: |
-        <div class="event-footer">
-            <p class="event-footer_banner">
-                <span class="event-footer_banner_message">This event requires an RSVP. Reserve your spot here: </span>
-                <a href="mailto:reserve@cfpb.gov" class="btn"><span class="btn_icon__left cf-icon cf-icon-email-social"></span> reserve@cfpb.gov</a>
-            </p>
-            <div class="content-l">
-                <section class="content-l_col content-l_col-1-2 event-footer_col">
-                    <h3 class="event-footer_heading">Downloads</h3>
-                    <a href="#">Download event PDF <span class="cf-icon cf-icon-pdf"></span></a>
-                </section>
-                <section class="content-l_col content-l_col-1-2 event-footer_col">
-                    <h3 class="event-footer_heading">Do you have event questions?</h3>
-                    <a href="mailto:reserve@cfpb.gov?subject=Event Question&body=Please include your question and fill in your first and last name below and send this email.%0D%0A%0D%0AQuestion:%0D%0AFirst name:%0D%0ALast name:">reserve@cfpb.gov <span class="cf-icon cf-icon-email-social"></span></a>
-                </section>
-            </div>
-        </div>
-      codenotes:
-        - |
-          Structural cheat sheet:
-          -----------------------
-          div.event-footer
-            p.event-footer_banner
-              span.event-footer_banner-message
-              a.btn
-                span.cf-icon
-            section.event-footer_col
-              h3.event-footer_heading
-              a.event-footer_link
-                span.cf-icon
-      notes:
-  tags:
-    - cfgov-event-footer
-*/
+.event-venue {
+    background: @gray-10;
+    border-top: 5px solid @green;
+
+    .event-media_container  {
+        max-height:  400px;
+        overflow: hidden;
+    }
+}
+
+.event-venue_header {
+    padding: 1.5em 1.5em .5em;
+    .webfont-regular();
+
+    .respond-to-max(@mobile-max {
+        padding: 1.5em;
+    });
+
+    .event-calendar_container {
+        .h5();
+        text-transform: uppercase;
+    }
+
+    .event-calendar_download {
+        display: block;
+        font-weight: bold;
+        padding-top: .2em;
+        text-decoration: none;
+        text-transform: none;
+
+        .respond-to-max(@mobile-max {
+            margin-top: 1em;
+            padding-top: .5em;
+        });
+    }
+
+    .event-meta {
+        .webfont-regular();
+     }
+
+    .event-meta_address {
+        &:before {
+            content : none;
+        }
+
+        .respond-to-max(@mobile-max {
+            margin: 0;
+        });
+    }
+
+    .event-meta_city:after {
+        content : none;
+    }
+
+    .event-meta_venue {
+        display: block;
+    }
+}
+
+.event-venue_heading {
+    display: inline-block;
+}
+
+
 .event-footer {
     .webfont-regular();
 
@@ -95,8 +208,3 @@
         });
     }
 }
-
-/* topdoc
-  name: EOF
-  eof: true
-*/
