Adds Sourcemaps and removes CSSMIN task
- Sourcemaps are incredibly important when tracking down styles in compiled less files
- CSSMIN removes sourcemaps; minification should really happen in the deployment
process, not development process
- Fixes #282

--- a/static/css/main.css
+++ b/static/css/main.css
@@ -18304,3 +18304,4 @@ a.focus .summary_heading {
   padding-bottom: 1.875em;
   border-bottom: 5px solid #101820;
 }
+/*# sourceMappingURL=main.css.map */
