--- a/_layouts/base.html
+++ b/_layouts/base.html
@@ -8,9 +8,9 @@
     developers, data scientists, and network, infrastructure, privacy and
     security pros. Keep an eye on our job opportunities at:
     http://www.consumerfinance.gov/jobs/
-     
+
     Also, you can see more of our code at https://github.com/cfpb
-     
+
     And by the way, there’s another hidden message somewhere on the following
     page: http://www.consumerfinance.gov/jobs/technology-innovation-fellows/.
     See if you can find it! Hint: picture yourself embedded in our work.
@@ -74,10 +74,10 @@
 -->
 
 {% block css %}
-<!--[if lt IE 9]>      <link rel="stylesheet" href="/static/css/main.ie.min.css"> <![endif]-->
-<!--[if gt IE 8]><!--> <link rel="stylesheet" href="/static/css/main.min.css"> <!--<![endif]-->
+<!--[if lt IE 9]>      <link rel="stylesheet" href="/static/css/main.ie.css"> <![endif]-->
+<!--[if gt IE 8]><!--> <link rel="stylesheet" href="/static/css/main.css"> <!--<![endif]-->
 {% endblock css %}
-    
+
 <!--
     ============
     HEAD SCRIPTS
@@ -116,7 +116,7 @@
         (function(d,t){var g=d.createElement(t),s=d.getElementsByTagName(t)[0];
         g.src=('https:'==location.protocol?'//ssl':'//www')+'.google-analytics.com/ga.js';
         s.parentNode.insertBefore(g,s)}(document,'script'));
-    </script> 
+    </script>
 
     <!-- GOOGLE TAG MANAGER -->
     <noscript><iframe src="//www.googletagmanager.com/ns.html?id=GTM-KSMF3R"
