--- a/static/css/main.ie.css
+++ b/static/css/main.ie.css
@@ -17728,3 +17728,5 @@ a.focus .summary_heading {
   padding-bottom: 1.875em;
   border-bottom: 5px solid #101820;
 }
+
+/*# sourceMappingURL=main.css.map */
