DF-1545-Events-page-cleanup
Revisions for Code Review

Revisions for Code Review

--- a/_includes/tags.html
+++ b/_includes/tags.html
@@ -21,7 +21,7 @@
 
    hide_header:        The optional boolean flag to hide the tags_header element.
                        Defaults to False. Adds class 'tags__hide-header' if True
-                       value passed (e.g., '', True, None).
+                       value passed (e.g., '', True, True).
 
    display_block       The optional boolean flag to display the tags list as block.
                        Defaults to False. Adds class 'tags__block-list' if True
