--- a/static/css/calendar-icon.less
+++ b/static/css/calendar-icon.less
@@ -42,7 +42,7 @@
     background-color: @background-color;
 
     /* Foreground */
-    font-family: 'Avenir Next', Helvetica, Arial;
+    .webfont-regular();
     line-height: 1;
     text-align: center;
 
@@ -59,7 +59,7 @@
         text-transform: uppercase;
 
         /* Display & Box Model */
-        padding: 0 0 0.15em;
+        padding-bottom: 0.15em;
 
         /* Miscellaneous, alphabetic */
         content: @month;
