--- a/static/css/cf-enhancements.less
+++ b/static/css/cf-enhancements.less
@@ -265,7 +265,7 @@ tbody {
 
 
 /* topdoc
-  name: Simple Tables
+  name: Simple Table
   family: cfgov-cf-enhancements
   notes:
     - Extends the above stacked tables for sm devices
