--- a/_includes/tags.html
+++ b/_includes/tags.html
@@ -19,19 +19,19 @@
                        using the literal string '/blog/'. Path is used to
                        create the filtered URL: {{ path }}?filter_tags={{ tag }}.
 
-   display_header:     The optional boolean flag to display the tags_header element.
-                       Defaults to True. Adds class 'tags__hide-header' if falsy
-                       value passed (e.g., '', False, None).
+   hide_header:        The optional boolean flag to hide the tags_header element.
+                       Defaults to False. Adds class 'tags__hide-header' if True
+                       value passed (e.g., '', True, None).
 
-   display_inline:     The optional boolean flag to display the tags list inline.
-                       Defaults to True. Adds class 'tags__block-list' if falsy
+   display_block       The optional boolean flag to display the tags list as block.
+                       Defaults to False. Adds class 'tags__block-list' if True
                        value passed.
 
    ========================================================================== #}
 
-{% macro render(tags, path, display_header=True, display_inline=True) %}
-<div class="tags {{'tags__hide-header' if not display_header}} {{'tags__block-list' if not display_inline}}">
-    <h1 class="tags_header {{'u-visually-hidden' if not display_header}}">Topics:</h1>
+{% macro render(tags, path, hide_header=False, display_block=False) %}
+<div class="tags {{'tags__hide-header' if hide_header}} {{'tags__block-list' if display_block}}">
+    <h1 class="tags_header {{'u-visually-hidden' if hide_header}}">Topics:</h1>
     <ul class="tags_list">
     {% for tag in tags %}
         <li class="tags_tag">
