Fixes DF-1501 - adds footer link
- Fixes DF-1501 - adds footer link for “Open Government”.

--- a/_includes/footer.html
+++ b/_includes/footer.html
@@ -241,6 +241,15 @@
                         Ombudsman
                     </a>
                 </li>
+                <li class="list_item">
+                    <!-- TODO Add href for link to
+                    http://www.consumerfinance.gov/open/
+                    when that address is finalized.
+                    -->
+                    <a class="list_link list_link__disabled">
+                        Open Government
+                    </a>
+                </li>
             </ul>
 
         </div><!-- END .footer-post -->
